force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/clofor_com_cfs__Flow_Tab_Setting__c.object-meta.xml
<CustomObject>
    <label>Flow Tab Setting</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Flow Tab Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Tab Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>