force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__API_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__API_Object_Name__c</fullName>
    <label>API Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>