force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>