force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__Static_Resource_Image_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Static_Resource_Image_Name__c</fullName>
    <label>Static Resource Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>