force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__Tab_Link__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tab_Link__c</fullName>
    <label>Tab Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>