force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tab_Name__c</fullName>
    <label>Tab Name Default</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>