force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__Tab_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tab_Name_VN__c</fullName>
    <label>Tab Name VietNamese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>