force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/fields/clofor_com_cfs__Tab_Order__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tab_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Tab Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>