force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/validationRules/clofor_com_cfs__Required_API_Object_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Required_API_Object_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clofor_com_cfs__Tab_Style__c , &apos;Object&apos;) &amp;&amp; ISBLANK(  clofor_com_cfs__API_Object_Name__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__API_Object_Name__c</errorDisplayField>
    <errorMessage>API Object Name is required.</errorMessage>
</ValidationRule>