force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/validationRules/clofor_com_cfs__Required_Report_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Required_Report_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clofor_com_cfs__Tab_Style__c , &apos;Report&apos;) &amp;&amp; ISBLANK(  clofor_com_cfs__Report_Developer_Name__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Report_Developer_Name__c</errorDisplayField>
    <errorMessage>Report Developer Name is required</errorMessage>
</ValidationRule>