force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/validationRules/clofor_com_cfs__Required_Tab_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Required_Tab_Link</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clofor_com_cfs__Tab_Style__c , &apos;Link&apos;) &amp;&amp;  ISBLANK( clofor_com_cfs__Tab_Link__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Tab_Link__c</errorDisplayField>
    <errorMessage>Tab Link is required</errorMessage>
</ValidationRule>