force-app/main/default/objects/clofor_com_cfs__Flow_Tab_Setting__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Flow__c</columns>
    <columns>clofor_com_cfs__Tab_Order__c</columns>
    <columns>clofor_com_cfs__External_Id__c</columns>
    <columns>clofor_com_cfs__Tab_Style__c</columns>
    <columns>clofor_com_cfs__Tab_Link__c</columns>
    <columns>clofor_com_cfs__Tab_Name__c</columns>
    <columns>clofor_com_cfs__Tab_Name_VN__c</columns>
    <columns>clofor_com_cfs__Tab_Name_JP__c</columns>
    <columns>clofor_com_cfs__Tab_Name_KR__c</columns>
    <columns>clofor_com_cfs__API_Object_Name__c</columns>
    <columns>clofor_com_cfs__Flow_Style__c</columns>
    <columns>clofor_com_cfs__Is_Active__c</columns>
    <columns>clofor_com_cfs__Static_Resource_Image_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>